adding attribute directive

--- a/app.component.html
+++ b/app.component.html
@@ -1,3 +1,41 @@
-<input type="text" ng-model="inputval">
+<div my-scroll="30" id="hi" class="asdf">
+        This is another test 
+    
+        <br/>
+    
+        This is another test 
+        
+            <br/>
+    
+            This is another test 
+            
+                <br/>
+    
+                This is another test 
+                
+                    <br/>
+    
+</div>
+    
+    
 
-<app-highlight></app-highlight>
+
+<div my-scroll="10">
+    This is a trial 
+
+    <br/>
+
+    This is a trial 
+    
+        <br/>
+
+        This is a trial 
+        
+            <br/>
+
+            This is a trial 
+            
+                <br/>
+
+</div>
+
